import "nanopb.proto";
import "commontypes.proto";
package barobo.Dongle;

//////////////////////////////////////////////////////////////////////////////
// Methods

message transmitUnicast {
    message In {
        required barobo.SerialId serialId = 1;
        required barobo.Payload payload = 2;
        required uint32 nRetries = 3; // exponential backoff parameter
    }
    message Result { }
}

message transmitRadioBroadcast {
    message In {
        required barobo.Payload payload = 1;
    }
    message Result { }
}

//////////////////////////////////////////////////////////////////////////////
// Broadcasts

message receiveTransmission {
    required bool isRadioBroadcast = 1;
    required barobo.SerialId serialId = 2;
    required barobo.Payload payload = 3;
}
